bug correction: sorting list of edges

--- a/topologyviewer/index.html
+++ b/topologyviewer/index.html
@@ -90,50 +90,69 @@
 					<select class="w3-select w3-border" id="fileOption" onchange="topmolviewer()" style="margin: 2px 0px; padding: 11px 0px 11px 0px;">
 					<optgroup label="Molecules available">
 <option value="./data/108l.pdb.network_backbone.data" > 108l.pdb.network_backbone.data </option>
+<option value="./data/108l.pdb.network_CA.data" > 108l.pdb.network_CA.data </option>
 <option value="./data/108l.pdb.network_hbond.data" > 108l.pdb.network_hbond.data </option>
 <option value="./data/108l.pdb.network_heavybackbone.data" > 108l.pdb.network_heavybackbone.data </option>
 <option value="./data/108l.pdb.network_heavyhbond.data" > 108l.pdb.network_heavyhbond.data </option>
 <option value="./data/108l.pdb.network_heavyprotein.data" > 108l.pdb.network_heavyprotein.data </option>
+<option value="./data/108l.pdb.network_protein.data" > 108l.pdb.network_protein.data </option>
 <option value="./data/1k1x.pdb.network_backbone.data" > 1k1x.pdb.network_backbone.data </option>
+<option value="./data/1k1x.pdb.network_CA.data" > 1k1x.pdb.network_CA.data </option>
 <option value="./data/1k1x.pdb.network_hbond.data" > 1k1x.pdb.network_hbond.data </option>
 <option value="./data/1k1x.pdb.network_heavybackbone.data" > 1k1x.pdb.network_heavybackbone.data </option>
 <option value="./data/1k1x.pdb.network_heavyhbond.data" > 1k1x.pdb.network_heavyhbond.data </option>
 <option value="./data/1k1x.pdb.network_heavyprotein.data" > 1k1x.pdb.network_heavyprotein.data </option>
+<option value="./data/1k1x.pdb.network_protein.data" > 1k1x.pdb.network_protein.data </option>
 <option value="./data/1rbp.pdb.network_backbone.data" > 1rbp.pdb.network_backbone.data </option>
+<option value="./data/1rbp.pdb.network_CA.data" > 1rbp.pdb.network_CA.data </option>
 <option value="./data/1rbp.pdb.network_hbond.data" > 1rbp.pdb.network_hbond.data </option>
 <option value="./data/1rbp.pdb.network_heavybackbone.data" > 1rbp.pdb.network_heavybackbone.data </option>
 <option value="./data/1rbp.pdb.network_heavyhbond.data" > 1rbp.pdb.network_heavyhbond.data </option>
 <option value="./data/1rbp.pdb.network_heavyprotein.data" > 1rbp.pdb.network_heavyprotein.data </option>
+<option value="./data/1rbp.pdb.network_protein.data" > 1rbp.pdb.network_protein.data </option>
 <option value="./data/betabarrel.pdb.network_backbone.data" > betabarrel.pdb.network_backbone.data </option>
+<option value="./data/betabarrel.pdb.network_CA.data" > betabarrel.pdb.network_CA.data </option>
 <option value="./data/betabarrel.pdb.network_hbond.data" > betabarrel.pdb.network_hbond.data </option>
 <option value="./data/betabarrel.pdb.network_heavybackbone.data" > betabarrel.pdb.network_heavybackbone.data </option>
 <option value="./data/betabarrel.pdb.network_heavyhbond.data" > betabarrel.pdb.network_heavyhbond.data </option>
 <option value="./data/betabarrel.pdb.network_heavyprotein.data" > betabarrel.pdb.network_heavyprotein.data </option>
+<option value="./data/betabarrel.pdb.network_protein.data" > betabarrel.pdb.network_protein.data </option>
 <option value="./data/helix310.pdb.network_backbone.data" > helix310.pdb.network_backbone.data </option>
+<option value="./data/helix310.pdb.network_CA.data" > helix310.pdb.network_CA.data </option>
 <option value="./data/helix310.pdb.network_hbond.data" > helix310.pdb.network_hbond.data </option>
 <option value="./data/helix310.pdb.network_heavybackbone.data" > helix310.pdb.network_heavybackbone.data </option>
 <option value="./data/helix310.pdb.network_heavyhbond.data" > helix310.pdb.network_heavyhbond.data </option>
 <option value="./data/helix310.pdb.network_heavyprotein.data" > helix310.pdb.network_heavyprotein.data </option>
+<option value="./data/helix310.pdb.network_protein.data" > helix310.pdb.network_protein.data </option>
 <option value="./data/helixAlpha310AlphaPiAalpha.pdb.network_backbone.data" > helixAlpha310AlphaPiAalpha.pdb.network_backbone.data </option>
+<option value="./data/helixAlpha310AlphaPiAalpha.pdb.network_CA.data" > helixAlpha310AlphaPiAalpha.pdb.network_CA.data </option>
 <option value="./data/helixAlpha310AlphaPiAalpha.pdb.network_hbond.data" > helixAlpha310AlphaPiAalpha.pdb.network_hbond.data </option>
 <option value="./data/helixAlpha310AlphaPiAalpha.pdb.network_heavybackbone.data" > helixAlpha310AlphaPiAalpha.pdb.network_heavybackbone.data </option>
 <option value="./data/helixAlpha310AlphaPiAalpha.pdb.network_heavyhbond.data" > helixAlpha310AlphaPiAalpha.pdb.network_heavyhbond.data </option>
 <option value="./data/helixAlpha310AlphaPiAalpha.pdb.network_heavyprotein.data" > helixAlpha310AlphaPiAalpha.pdb.network_heavyprotein.data </option>
+<option value="./data/helixAlpha310AlphaPiAalpha.pdb.network_protein.data" > helixAlpha310AlphaPiAalpha.pdb.network_protein.data </option>
 <option value="./data/helixalpha.pdb.network_backbone.data" > helixalpha.pdb.network_backbone.data </option>
+<option value="./data/helixalpha.pdb.network_CA.data" > helixalpha.pdb.network_CA.data </option>
 <option value="./data/helixalpha.pdb.network_hbond.data" > helixalpha.pdb.network_hbond.data </option>
 <option value="./data/helixalpha.pdb.network_heavybackbone.data" > helixalpha.pdb.network_heavybackbone.data </option>
 <option value="./data/helixalpha.pdb.network_heavyhbond.data" > helixalpha.pdb.network_heavyhbond.data </option>
 <option value="./data/helixalpha.pdb.network_heavyprotein.data" > helixalpha.pdb.network_heavyprotein.data </option>
+<option value="./data/helixalpha.pdb.network_protein.data" > helixalpha.pdb.network_protein.data </option>
 <option value="./data/helixpi.pdb.network_backbone.data" > helixpi.pdb.network_backbone.data </option>
+<option value="./data/helixpi.pdb.network_CA.data" > helixpi.pdb.network_CA.data </option>
 <option value="./data/helixpi.pdb.network_hbond.data" > helixpi.pdb.network_hbond.data </option>
 <option value="./data/helixpi.pdb.network_heavybackbone.data" > helixpi.pdb.network_heavybackbone.data </option>
 <option value="./data/helixpi.pdb.network_heavyhbond.data" > helixpi.pdb.network_heavyhbond.data </option>
 <option value="./data/helixpi.pdb.network_heavyprotein.data" > helixpi.pdb.network_heavyprotein.data </option>
+<option value="./data/helixpi.pdb.network_protein.data" > helixpi.pdb.network_protein.data </option>
 <option value="./data/loops.pdb.network_backbone.data" > loops.pdb.network_backbone.data </option>
+<option value="./data/loops.pdb.network_CA.data" > loops.pdb.network_CA.data </option>
 <option value="./data/loops.pdb.network_hbond.data" > loops.pdb.network_hbond.data </option>
 <option value="./data/loops.pdb.network_heavybackbone.data" > loops.pdb.network_heavybackbone.data </option>
 <option value="./data/loops.pdb.network_heavyhbond.data" > loops.pdb.network_heavyhbond.data </option>
 <option value="./data/loops.pdb.network_heavyprotein.data" > loops.pdb.network_heavyprotein.data </option>
+<option value="./data/loops.pdb.network_protein.data" > loops.pdb.network_protein.data </option>
+
 					</optgroup>
 					</select>
 					</form>
