--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</style>
 	<script type="text/javascript">
 	if (window.location = "https://rams-research.github.io/") {
-   	window.location.href = "http://rams-research.net"; 
+   	window.location.href = "https://rams-research.net"; 
 	}
 	</script>
 </head>	
